--- a/postoffice/frontadmin/templates/jam/base.html
+++ b/postoffice/frontadmin/templates/jam/base.html
@@ -1,17 +1,20 @@
-<html class="no-js">
+{% load static %}<html class="no-js">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<link rel="stylesheet" href="https://cdn.rawgit.com/doximity/vital/v1.2.1/dist/css/vital.min.css">-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.2.3/milligram.css">
-
-
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'jam/skin/dist/assets/stylesheets/base.css' %}">
-
-    <script src="{% static 'jam/skin/bower_components/modernizr/modernizr.js' %}"></script>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'Skeleton-2.0.4/css/normalize.css' %}">
+    <link rel="stylesheet" href="{% static 'Skeleton-2.0.4/css/skeleton.css' %}">
+    <style>
+    textarea { width: 100%; max-width: 960px; height: 30rem; }
+    input[type=text] { width: 100%; }
+    header.lead { margin: 0px auto; background-color: #333; margin-bottom: 2em; }
+    main { clear:both; }
+    td span.subtitle { color:#999; font-size: 1.5rem; }
+    h4 { margin: 0; line-height:0.8; font-size:1.8rem; font-weight: 600; }
+    </style>
   </head>
   <body>
     <!--if lt IE 8
@@ -21,17 +24,19 @@
       to improve your experience.
 
     -->
-    <header>
+    <header class="lead">
+      <div class="container">
       <div class="logo"><a href="{% url 'frontadmin.index' %}" class="logo">Home</a></div>
-      <div class="toolbar">
+      <div class="toolbar"></div>
       </div>
     </header>
 
     <main>
+    <div class="container">
     {% block main %}{% endblock %}
+    </div>
     </main>
 
     <footer></footer>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   </body>
 </html>
