--- a/postoffice/frontadmin/templates/jam/index.html
+++ b/postoffice/frontadmin/templates/jam/index.html
@@ -11,6 +11,9 @@
             <h2>Example app</h2>
             <ul>
                 <li><a href="{% url 'articles.article.list' %}">Articles</a></li>
+                <li><a href="{% url 'sections.section.list' %}">Sections</a></li>
+                <li><a href="{% url 'sections.sectionmember.list' %}">Members</a></li>
+                <li><a href="{% url 'topics.topic.list' %}">Topics</a></li>
             </ul>
         </div><!-- /.model-group -->
     </section>
